--- a/gcs-library/build.gradle
+++ b/gcs-library/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'gcs-library'
+
+    publishedGroupId = 'com.bahram'
+    libraryName = 'GoogleCloudStorage'
+    artifact = 'gcs'
+
+    libraryDescription = 'A library for simple communication with Google Cloud Storage.'
+
+    siteUrl = 'https://github.com/Mithrandir21/GoogleCloudStorage'
+    gitUrl = 'https://github.com/Mithrandir21/GoogleCloudStorage.git'
+
+    libraryVersion = '0.0.1'
+
+    developerId = 'mithrandir21'
+    developerName = 'Bahram Malaekeh'
+    developerEmail = 'bahram.malaekeh@gmail.com'
+
+    licenseName = 'GNU General Public License, version 3'
+    licenseUrl = 'http://opensource.org/licenses/gpl-3.0.html'
+    allLicenses = ["GPL-3.0"]
+}
+
 android {
     compileSdkVersion 21
     buildToolsVersion "22.0.1"
@@ -17,6 +41,9 @@ android {
         }
     }
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
